[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-pipeline"
version = "0.1.0"
description = "Claim-centric narrative report extraction and Neo4j graph pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
neo4j = ["neo4j>=5.20.0"]
dev = ["pytest>=8.0.0"]
tools = [
    "pymupdf>=1.24",
    "pytesseract>=0.3",
    "anthropic>=0.25",
]
retrieval = [
    "neo4j>=5.20.0",
    "anthropic>=0.25",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.7",
]

[project.scripts]
graphrag = "graphrag_pipeline.cli:main"
graphrag-create-admin = "graphrag_pipeline.auth.seed:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
markers = [
    "integration: marks tests that require a live Neo4j instance (deselect with -m 'not integration')",
]

[tool.setuptools]
packages = [
    "graphrag_pipeline",
    "graphrag_pipeline.auth",
    "graphrag_pipeline.extractors",
    "graphrag_pipeline.graph",
    "graphrag_pipeline.queries",
    "graphrag_pipeline.review",
    "graphrag_pipeline.review.detectors",
    "graphrag_pipeline.review.web",
    "graphrag_pipeline.retrieval",
    "graphrag_pipeline.retrieval.web",
]

[tool.setuptools.package-data]
"graphrag_pipeline" = ["resources/*.yaml", "resources/*.csv"]
