[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemynd"
version = "0.1.0"
description = "Claim-centric narrative report extraction and Neo4j graph pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
neo4j = ["neo4j>=5.20.0"]
dev = ["pytest>=8.0.0", "hypothesis>=6.0.0"]
tools = [
    "pymupdf>=1.24",
    "pytesseract>=0.3",
    "anthropic>=0.25",
]
retrieval = [
    "neo4j>=5.20.0",
    "anthropic>=0.25",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.7",
]
ingest = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.7",
    "pymupdf>=1.24",
    "pytesseract>=0.3",
    "Pillow>=10.0",
]

[project.scripts]
gemynd = "gemynd.cli:main"
gemynd-create-admin = "gemynd.auth.seed:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
markers = [
    "integration: marks tests that require a live Neo4j instance (deselect with -m 'not integration')",
]

[tool.setuptools]
packages = [
    "gemynd",
    "gemynd.core",
    "gemynd.core.graph",
    "gemynd.shared",
    "gemynd.auth",
    "gemynd.ingest",
    "gemynd.ingest.web",
    "gemynd.ingest.extractors",
    "gemynd.ingest.graph",
    "gemynd.ingest.export",
    "gemynd.ingest.annotation",
    "gemynd.review",
    "gemynd.review.detectors",
    "gemynd.review.web",
    "gemynd.retrieval",
    "gemynd.retrieval.web",
]

[tool.setuptools.package-data]
"gemynd" = ["resources/*.yaml", "resources/*.csv"]
"gemynd.auth" = ["templates/*.html"]
"gemynd.ingest.web" = ["templates/*.html", "templates/fragments/*.html"]
"gemynd.review.web" = ["templates/*.html"]
"gemynd.retrieval.web" = ["templates/*.html", "templates/fragments/*.html"]
